<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.courtcounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/textStyle_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/team_name_text_padding"
                android:text="@string/text_1" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/textStyle_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:freezesText="true"
                android:paddingBottom="@dimen/main_score_padding"
                android:text="0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    style="@style/textStyle_3"
                    android:layout_width="@dimen/button_width_1"
                    android:layout_height="wrap_content"
                    android:onClick="attemptThreeForTeamA"
                    android:text="@string/ButtonText_4" />

                <Button
                    style="@style/textStyle_3"
                    android:layout_width="@dimen/button_width_1"
                    android:layout_height="wrap_content"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/ButtonText_1" />

                <TextView
                    android:id="@+id/team_a_3pt_stat"
                    android:layout_width="@dimen/text_width_1"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:text="0"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    style="@style/textStyle_3"
                    android:layout_width="@dimen/button_width_1"
                    android:layout_height="wrap_content"
                    android:onClick="attemptTwoForTeamA"
                    android:text="@string/ButtonText_4" />

                <Button
                    style="@style/textStyle_3"
                    android:layout_width="@dimen/button_width_1"
                    android:layout_height="wrap_content"
                    android:onClick="addTwoForTeamA"
                    android:text="@string/ButtonText_2" />

                <TextView
                    android:id="@+id/team_a_2pt_stat"
                    android:layout_width="@dimen/text_width_1"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:text="0"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    style="@style/textStyle_3"
                    android:layout_width="@dimen/button_width_1"
                    android:layout_height="wrap_content"
                    android:onClick="attemptOneForTeamA"
                    android:text="@string/ButtonText_4" />

                <Button
                    style="@style/textStyle_3"
                    android:layout_width="@dimen/button_width_1"
                    android:layout_height="wrap_content"
                    android:onClick="addOneForTeamA"
                    android:text="@string/ButtonText_3" />

                <TextView
                    android:id="@+id/team_a_1pt_stat"
                    android:layout_width="@dimen/text_width_1"
                    android:layout_height="wrap_content"
                    android:freezesText="true"
                    android:text="0"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/division_view_margin"
            android:background="@color/colorDivisionLine" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/textStyle_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/team_name_text_padding"
                android:text="@string/text_2" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/textStyle_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:freezesText="true"
                android:paddingBottom="@dimen/main_score_padding"
                android:text="0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/team_b_3pt_stat"
                    android:layout_width="@dimen/text_width_1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:freezesText="true"
                    android:text="0"
                    android:textAlignment="center" />

                <Button
                    style="@style/textStyle_3"
                    android:layout_width="@dimen/button_width_1"
                    android:layout_height="wrap_content"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/ButtonText_1" />

                <Button
                    style="@style/textStyle_3"
                    android:layout_width="@dimen/button_width_1"
                    android:layout_height="wrap_content"
                    android:onClick="attemptThreeForTeamB"
                    android:text="@string/ButtonText_4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/team_b_2pt_stat"
                    android:layout_width="@dimen/text_width_1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:freezesText="true"
                    android:text="0"
                    android:textAlignment="center" />

                <Button
                    style="@style/textStyle_3"
                    android:layout_width="@dimen/button_width_1"
                    android:layout_height="wrap_content"
                    android:onClick="addTwoForTeamB"
                    android:text="@string/ButtonText_2" />

                <Button
                    style="@style/textStyle_3"
                    android:layout_width="@dimen/button_width_1"
                    android:layout_height="wrap_content"
                    android:onClick="attemptTwoForTeamB"
                    android:text="@string/ButtonText_4" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/team_b_1pt_stat"
                    android:layout_width="@dimen/text_width_1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:freezesText="true"
                    android:text="0"
                    android:textAlignment="center" />

                <Button
                    style="@style/textStyle_3"
                    android:layout_width="@dimen/button_width_1"
                    android:layout_height="wrap_content"
                    android:onClick="addOneForTeamB"
                    android:text="@string/ButtonText_3" />

                <Button
                    style="@style/textStyle_3"
                    android:layout_width="@dimen/button_width_1"
                    android:layout_height="wrap_content"
                    android:onClick="attemptOneForTeamB"
                    android:text="@string/ButtonText_4" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/teamAPicture"
            android:layout_width="@dimen/picture_width"
            android:layout_height="@dimen/picture_height"
            android:layout_margin="@dimen/picture_margin"
            android:background="@drawable/a_team_picture" />

        <ImageView
            android:id="@+id/teamBPicture"
            android:layout_width="@dimen/picture_width"
            android:layout_height="@dimen/picture_height"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/picture_margin"
            android:background="@drawable/b_team_picture" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="@dimen/button_width_2"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/reset_button_margin"
            android:onClick="resetScores"
            android:text="@string/ButtonText_5" />

        <Button
            android:id="@+id/show_stat_button"
            android:layout_width="@dimen/button_width_2"
            android:layout_height="wrap_content"
            android:layout_above="@id/reset_button"
            android:layout_centerHorizontal="true"
            android:onClick="moreStat"
            android:text="@string/ButtonText_6" />

    </RelativeLayout>

</LinearLayout>
